--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
         <input type="number" id="numProcesses" name="numProcesses" required>
         <button type="submit">Start Simulation</button>
     </form>
+    <div id="resultsContainer"></div>
+
     <div id="processStatus">
         <h2>Process Management Simulation</h2>
         <div id="globalCounter">Global Counter: 0</div>
